2010-01-11  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-status-format): modify the
	meaning of the specifier "%t" to remove implicit filling as a
	paragraph.
	(twittering-render-timeline): remove implicit filling a text as a
	paragraph. In addition, a newline as a delimiter is added by
	`twittering-format-status'.
	(twittering-format-status): with "%t", fill a text as a paragraph.
	This function adds a newline at the end of status instead of
	`twittering-render-timeline'. Then, the newline as a delimiter
	also has the same text properties as the body of the tweet.

2010-01-10  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-remove-duplicates): add for
	portability.
	(twittering-completing-read): add a modified version of
	`completing-read' that can accept candidates as a list of a string
	on Emacs21.
	(twittering-set-current-hashtag): use `twittering-completing-read'
	instead of `completing-read'.
	(twittering-read-username-with-completion): likewise.
	(twittering-read-list-name): likewise.
	(twittering-read-timeline-spec-with-completion): likewise.

2010-01-10  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/test-twittering-mode.el (test-status-not-blank-p): add a
	testcase reproducing the bug of twittering-status-not-blank-p.

	* twittering-mode.el (twittering-use-native-retweet): renamed from
	twittering-use-native-retweets
	(twittering-status-not-blank-p): bug fix: return nil if a status
	is ended by '@foo'.

	* twittering-mode.el (twittering-make-display-spec-for-icon):
	returns nil if the type of the image is not supported.

2010-01-09  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Change
	retweet related variables to local scope from global one.

	* twittering-mode.el (twittering-extract-timeline-spec): Change
	syntax of error message to fit the GNU Emacs Lisp convention.
	(twittering-timeline-spec-to-host-method): Likewise.